package br.notelab.model;

public class Endereco {
    private Long id;

    private String cep;
    private String logradouro;
    private String bairro;
    private String numero;
    private String complemento;
    private String cidade;
    private String estado;

}
