@startuml uml

' Compra
class Pedido {
    - id: Long
    - data: LocalDate
    - total: Double
}

class ItemPedido {
    - id: Long
    - quantidade: Integer
    - total: Double
}

' Usuario
class Pessoa {
    - id: Long
    - nome: String
    - dataNascimento: LocalDate
}

class Cliente {
    - id: Long
    - email: String
    - senha: String
}

class Funcionario {
    - id: Long
    - salario: Double
    - email: String
    - senha: String
}

enum Sexo {
    + MASCULINO: int
    + FEMININO: int
}

class Endereco {
    - id: Long
    - cep: String
    - logradouro: String
    - bairro: String
    - numero: String
    - complemento: String
    - cidade: String
    - estado: String
}

class Telefone {
    - id: Long
    - ddd: String
    - numero: String
}

' Notebook

class Notebook {
    - id: Long
    - descricao: String
    - linha: String
    - serie: String
    - preco: Double
    - modelo: String
    - isGamer: Boolean
} 

' Notebook --> Fornecedor. Se colocasse ao contrário, toda vez que fosse cadastrar o fornecedor, teria que
' cadastrar os notebooks também.
class Fornecedor {
    - id: Long
    - nome: String
    - email: String
    - telefone: String
    - cnpj: String
}

enum TipoPlacaVideo {
    + INTEGRADA: int
    + DEDICADA: int
}

enum SistemaOperacional {
    + WINDOWS: int
    + LINUX: int
    + MAC_OS: int
}

class Recurso {
    - id: Long
    - descricao: String
}   

' Placa de Video    
class PlacaVideo {
    - id: Long
    - modelo: String
    - memoriaVideo: String
}

enum FabricantePlacaVideo {
    + NVIDIA: int
    + AMD: int
}

class TipoMemoriaPlacaVideo {
    - id: Long
    - descricao: String
}

' Processador
class Processador {
    - id: Long
    - modelo: String
    - geracao: String
    - velocidade: String
    - nucleos: int
    - threads: int
    - memoriaCache: String
}

' Memoria
class Armazenamento {
    - id: Long
    - capacidade: String
}

enum TipoArmazenamento {
    + HD: int
    + SSD: int
}

class MemoriaRam {
    - id: Long
    - capacidade: String
    - expansivelAte: String
}


' Tela
class Tela {
    - id: Long
    - tamanho: String
    - resolucao: String 
    - taxaHz: int
}

' Especificacao. Informação exclusiva do Notebook. Não pode ser reaproveitada. Se tiver que usar dnv, teria que cadastrar outro.
' Composição: Estou sempre cadastrando se for composição. Deve ser 1 de onde parte a composição
class Especificacao {
    - id: Long
    - altura: String
    - largura: String
    - profundidade: String
    - peso: String
}

' Conexões
class Conexao {
    - id: Long
    - entradasUsb: int
}

'Wifi 6, Bluetooth
class ConexaoSemFio {
    - id: Long
    - conexao: String
}

'AUDIO USB-C ETHERNET_RJ-45USB 3.1 USB 2.0 HDMI LEITOR DE CARTAO
class EntradaSaida { 
    - id: Long
    - descricao: String
}

Pedido "1" *--> "*" ItemPedido
Pedido "*" o-left-> "1" Cliente
Pedido "*" --> "1" Endereco
ItemPedido "*" o--> "1" Notebook

Pessoa "*" -right-> "1" Endereco
Pessoa "1" *-left-> "1" Telefone
Pessoa "*" --> "1" Sexo

Cliente "1" --left> "1" Pessoa
Funcionario "1" --> "1" Pessoa

Notebook "1" *--> "1" Tela
Notebook "*" o--> "1" Processador
Notebook "*" --> "1" TipoPlacaVideo
Notebook "*" o--> "1" PlacaVideo
Notebook "*" o--> "*" Armazenamento
Notebook *--> "1" MemoriaRam
Notebook "1" *--> "*" Conexao
Notebook "1" *--> "1" Especificacao
Notebook "*" --> "1" SistemaOperacional
Notebook "*" o--> "*" Recurso
Notebook "*" o--> "1" Fornecedor

PlacaVideo "*"--> "1" FabricantePlacaVideo
PlacaVideo "*" --> "1" TipoMemoriaPlacaVideo

Armazenamento "*" --> "1" TipoArmazenamento

Conexao "*" o--> "*" ConexaoSemFio
Conexao "*" o--> "*" EntradaSaida

Fornecedor "1" *-left-> "1" Telefone

@enduml
